opt:jar index